--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- inizio header -->
     <header>
-        <img src="img/logo.svg" alt="">
+        <img src="img/logo.svg" alt="logo the booleaner">
 
     </header>
 
