--- a/index.html
+++ b/index.html
@@ -8,13 +8,39 @@
 </head>
 <body>
     <!-- inizio header -->
+
+
     <header>
         <img src="img/logo.svg" alt="logo the booleaner">
 
     </header>
 
     <!-- inizio main -->
+
+
     <main>
+        <!-- prima sezione -->
+
+         <section>
+            
+
+        </section>
+
+        <!-- seconda sezione -->
+
+
+        <section>
+
+        </section>
+
+        <!-- terza sezione -->
+
+
+        <section>
+
+        </section>
+
+
 
     </main>
     
